--- a/nationalparks-javascript.adoc
+++ b/nationalparks-javascript.adoc
@@ -1,8 +1,6 @@
-In this lab, we're going to deploy a backend service, developed in JavaScript
- that will expose 2 main REST endpoints to the visualizer
-application (`parksmap` web component that was deployed in the previous labs).
-The application will query for national parks information (including it's
-coordinates) that is stored in a MongoDB database.  This application will also
+In this lab, we're going to deploy a backend service, developed in JavaScript, that will expose 2 main REST endpoints to the visualizer
+application (i.e., `parksmap` web component that was deployed in the previous labs).
+The application will query for national parks information (including coordinates) that is stored in a MongoDB database. This application will also
 provide an external access point, so that the API provided can be directly used
 by the end user.
 
@@ -14,8 +12,7 @@ In a previous lab, we learned how to deploy a pre-existing container
 image. Now we will expand on that by learning how OpenShift builds
 container images using source code from an existing repository.  This is accomplished using the Source-to-Image project.
 
-https://github.com/openshift/source-to-image[Source-to-Image (S2I)] is a
-open source project sponsored by Red Hat that has the following goal:
+https://github.com/openshift/source-to-image[Source-to-Image (S2I)] is an open source project sponsored by Red Hat that has the following goal:
 
 [source]
 ----
@@ -30,7 +27,7 @@ built artifacts, etc.
 OpenShift is S2I-enabled and can use S2I as one of its build mechanisms (in
 addition to building container images from Dockerfiles, and "custom" builds).
 
-OpenShift runs the S2I process inside a special *Pod*, called a Build
+OpenShift runs the S2I process inside a special *Pod* called a Build
 Pod, and thus builds are subject to quotas, limits, resource scheduling, and
 other aspects of OpenShift.
 
@@ -43,7 +40,7 @@ remember about S2I is that it's magic.
 == Exercise: Creating a JavaScript application
 
 The backend service that we will be deploying as part of this exercise is
-called `nationalparks`.  This is a JavaScript application that performs 2D
+called `nationalparks`. This is a JavaScript application that performs 2D
 geo-spatial queries against a MongoDB database to locate and return map
 coordinates of all National Parks in the world. That was just a fancy way of
 saying that we are going to deploy a webservice that returns a JSON list of
@@ -72,7 +69,7 @@ http://gogs-{{INFRA_PROJECT}}.{{ROUTER_ADDRESS}}/{{ USER_NAME }}/nationalparks.g
 ----
 
 Later in the lab, we want you to make a code change and then rebuild your
-application. This is a fairly simple JavaScript application.
+application. No knowledge of JavaScript is needed as this is a fairly simple JavaScript application.
 
 === Build the Code on OpenShift
 
@@ -82,7 +79,7 @@ have your own git repository, let's use it with a simple JavaScript S2I image.
 
 CAUTION: In the following step(s), replace `{{ USER_PROJECT }}` with the project provided to you.
 
-In the OpenShift web console, find your `{{ USER_PROJECT }}` project, and then
+In the OpenShift web console, find your `{{ USER_PROJECT }}` project and then
 click the *Add* button and then the *Browse Catalog* link as highlighted in the following image:
 
 image::nationalparks-show-catalog.png[Add to Project]
@@ -180,8 +177,8 @@ Where you should see something like the following:
 [source,bash]
 ----
 NAME            HOST/PORT                                                   PATH      SERVICES        PORT       TERMINATION
-nationalparks   nationalparks-{{ USER_PROJECT }}.{{ROUTER_ADDRESS}}             nationalparks   8080-tcp
-parksmap        parksmap-{{ USER_PROJECT }}.{{ROUTER_ADDRESS}}                  parksmap        8080-tcp
+nationalparks   nationalparks-{{ USER_PROJECT }}.{{ROUTER_ADDRESS}}                   nationalparks   8080-tcp
+parksmap        parksmap-{{ USER_PROJECT }}.{{ROUTER_ADDRESS}}                        parksmap        8080-tcp
 ----
 
 In the above example, the URL is:
