updated language-specific lab names and some initial content

--- a/workshop/content/common-cli.adoc
+++ b/workshop/content/common-cli.adoc
@@ -12,9 +12,9 @@ programming language and is available for the following operating systems:
 You might already have the OpenShift CLI available on your environment. You can verify
 it by running an `oc` command:
 
-[source,bash]
+[source,bash,role=execute-1]
 ----
-$ oc version
+oc version --short
 ----
 
 You should see the following (or something similar):
@@ -28,54 +28,7 @@ If the `oc` doesn't exist or you have an older version of the OpenShift CLI, fol
 the next sections to install or update the OpenShift CLI. Otherwise, skip to the
 next lab.
 
-== Download and Install OpenShift CLI on Windows
 
-Download the the OpenShift CLI tool for link:{{DOWNLOAD_CLIENT_WINDOWS}}[Microsoft Windows]
-
-Once the file has been downloaded, you will need to extract the contents as it
-is a compressed archive. I would suggest saving this file to the following
-directories:
-
-[source,bash]
-----
-C:\OpenShift
-----
-
-In order to extract a zip archive on windows, you will need a zip utility
-installed on your system. With newer versions of windows (greater than XP),
-this is provided by the operating system. Just right click on the downloaded
-file using file explorer and select to extract the contents.
-
-Now you can add the OpenShift CLI tools to your PATH. Because changing your PATH
-on windows varies by version of the operating system, we will not list each operating system here.
-However, the general workflow is right click on your computer name inside of the file explorer. Select Advanced system settings. I guess changing your PATH is considered an advanced task? :) Click on the advanced tab, and then finally click on Environment variables.
-Once the new dialog opens, select the Path variable and add *`;C:\OpenShift`* at
-the end. For an easy way out, you could always just copy it to C:\Windows or a
-directory you know is already on your path. For more detailed instructions:
-
-- link:https://support.microsoft.com/en-us/kb/310519[Windows XP]
-- link:http://banagale.com/changing-your-system-path-in-windows-vista.htm[Windows Vista]
-- link:http://geekswithblogs.net/renso/archive/2009/10/21/how-to-set-the-windows-path-in-windows-7.aspx[Windows 7]
--link:http://www.itechtics.com/customize-windows-environment-variables/[Windows 8]
-- Windows 10 - Follow the directions above.
-
-At this point, we should have the oc tool available for use. Let's test this
-out by printing the version of the oc command:
-
-[source, bash]
-----
-> oc version
-----
-
-You should see the following (or something similar):
-
-[source,bash]
-----
-{{OC_VERSION}}
-----
-
-If you get an error message, you have not updated your path correctly. If you
-need help, raise your hand and the instructor will assist.
 
 == Download and Install OpenShift CLI on Linux
 
@@ -95,18 +48,18 @@ file.  Once you are in the directory, enter in the following command:
 
 CAUTION: The name of the oc packaged archive may vary. Adjust accordingly.
 
-[source,bash]
+[source,bash,role=copyandedit]
 ----
-$ tar zxvf oc-linux.tar.gz
+$tar zxvf oc-linux.tar.gz
 ----
 
 The tar.gz file name needs to be replaced by the entire name that was downloaded in the previous step.
 
 Now you can add the OpenShift CLI tools to your PATH.
 
-[source,bash]
+[source,bash,role=execute-1]
 ----
-$ export PATH=$PATH:~/openShift
+export PATH=$PATH:~/openShift
 ----
 
 At this point, we should have the oc tool available for use. Let's test this
