--- a/workshop/content/parksmap-scaling.adoc
+++ b/workshop/content/parksmap-scaling.adoc
@@ -35,7 +35,7 @@ Now that we know the background of what a *ReplicatonController* and
 look at the *DeploymentConfig* (DC) that was created for you when you told
 OpenShift to stand up the `parksmap` image:
 
-[source,bash,role=copypaste]
+[source,bash,role=execute-1]
 ----
 oc get dc
 ----
@@ -51,7 +51,7 @@ To get more details, we can look into the *ReplicationController* (*RC*).
 Take a look at the *ReplicationController* (RC) that was created for you when
 you told OpenShift to stand up the `parksmap` image:
 
-[source,bash,role=copypaste]
+[source,bash,role=execute-1]
 ----
 oc get rc
 ----
@@ -75,28 +75,24 @@ https://{{DOCS_URL}}/dev_guide/pod_autoscaling.html[Horizontal Pod Autoscaler he
 == Exercise: Scaling the Application
 
 Let's scale our parksmap "application" up to 2 instances. We can do this with
-the `scale` command. You could also do this by incrementing the Desired Count in the OpenShift web console. It's your choice.
+the `scale` command. You could also do this by incrementing the Desired Count in the OpenShift web console. Pick one of these methods; it's your choice.
 
-[source,bash,role=copypaste]
+[source,bash,role=execute-1]
 ----
 oc scale --replicas=2 dc/parksmap
 ----
 
-You can also scale up to two pods in the web console. From the project status page, first click the *>* symbol to toggle the details panel as shown in the following image:
+You can also scale up to two pods in the Developer Console. From the Topology view, first click the `parksmap` deployment config and select the *Overview* tab:
 
 image::images/parksmap-scaleup.png[Scaling]
 
-Next, click the edit icon in the Desired Count section:
+Next, click the *^* icon next to the Pod visualization to scale up to 2 pods.
 
-image::images/parksmap-scaleup-2.png[Desired Count]
-
-Finally, click the *+* to scale up to 2 pods and then click the blue *Save* button.
-
-image::images/parksmap-scaleup-3.png[Scale Up]
+image::images/parksmap-scaled.png[Scaled Up]
 
 To verify that we changed the number of replicas, issue the following command:
 
-[source,bash,role=copypaste]
+[source,bash,role=execute-1]
 ----
 oc get rc
 ----
@@ -110,7 +106,7 @@ parksmap-1   2         2         0         4h
 You can see that we now have 2 replicas. Let's verify the number of pods with
 the `oc get pods` command:
 
-[source,bash,role=copypaste]
+[source,bash,role=execute-1]
 ----
 oc get pods
 ----
@@ -126,7 +122,7 @@ parksmap-1-j2lw9    1/1     Running     0          31m
 And lastly, let's verify that the *Service* that we learned about in the
 previous lab accurately reflects two endpoints:
 
-[source,bash,role=copypaste]
+[source,bash,role=execute-1]
 ----
 oc describe svc parksmap
 ----
@@ -136,22 +132,27 @@ You will see something like the following output:
 [source,bash]
 ----
 Name:              parksmap
-Namespace:         user2
-Labels:            app=parksmap
+Namespace:         lab-getting-started-starter-workshop-apb-test-user1
+Labels:            app=workshop
+                   app.kubernetes.io/component=parksmap
+                   app.kubernetes.io/instance=parksmap
+                   app.kubernetes.io/part-of=workshop
+                   component=parksmap
+                   role=frontend
 Annotations:       openshift.io/generated-by: OpenShiftWebConsole
-Selector:          deploymentconfig=parksmap
+Selector:          app=parksmap,deploymentconfig=parksmap
 Type:              ClusterIP
-IP:                172.30.250.179
+IP:                172.30.22.209
 Port:              8080-tcp  8080/TCP
 TargetPort:        8080/TCP
-Endpoints:         10.130.2.68:8080,10.130.2.70:8080
+Endpoints:         10.128.2.90:8080,10.131.0.40:8080
 Session Affinity:  None
 Events:            <none>
 ----
 
 Another way to look at a *Service*'s endpoints is with the following:
 
-[source,bash,role=copypaste]
+[source,bash,role=execute-1]
 ----
 oc get endpoints parksmap
 ----
@@ -161,14 +162,14 @@ And you will see something like the following:
 [source,bash]
 ----
 NAME       ENDPOINTS                           AGE
-parksmap   10.130.2.68:8080,10.130.2.70:8080   59m
+parksmap   10.128.2.90:8080,10.131.0.40:8080   45m
 ----
 
 Your IP addresses will likely be different, as each pod receives a unique IP
 within the OpenShift environment. The endpoint list is a quick way to see how
 many pods are behind a service.
 
-You can also see that both *Pods* are running using the web console:
+You can also see that both *Pods* are running in the Developer Console:
 
 image::images/parksmap-scaled.png[Scaling]
 
@@ -187,18 +188,18 @@ Since we have two *Pods* running right now, let's see what happens if we
 "accidentally" kill one. Run the `oc get pods` command again, and choose a *Pod*
 name. Then, do the following:
 
-[source,bash,role=copypaste]
+[source,bash,role=copy-and-edit]
 ----
-oc delete pod parksmap-1-gxbgq && oc get pods
+oc delete pod parksmap-1-2fp7t && oc get pods
 ----
 
 [source,bash]
 ----
-pod "parksmap-1-gxbgq" deleted
-NAME                READY   STATUS      RESTARTS   AGE
-parksmap-1-7678z    1/1     Running     0          13s
-parksmap-1-deploy   0/1     Completed   0          62m
-parksmap-1-j2lw9    1/1     Running     0          34m
+pod "parksmap-1-2fp7t" deleted
+NAME                READY   STATUS              RESTARTS   AGE
+parksmap-1-bwwkw    0/1     ContainerCreating   0          3s
+parksmap-1-deploy   0/1     Completed           0          47m
+parksmap-1-qfn7l    1/1     Running             0          46m
 ----
 
 Did you notice anything? One container has been deleted, and there's a new container already being created. 
